--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -3,7 +3,7 @@
   margin: 5rem 6rem 4.5rem;
   display: flex;
   justify-content: space-between;
-  transition: background-color 0.7s ease-in-out, color 1s ease-in-out;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .filter {
@@ -20,7 +20,7 @@
   position: relative;
   cursor: pointer;
   justify-content: space-between;
-  transition: background-color 0.7s ease-in-out, color 0.7s ease-in-out;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .input input {
@@ -36,7 +36,7 @@
   border-radius: 4px;
   box-shadow: 0 7px 29px 0 rgba(100, 100, 111, 0.2);
   padding: 2rem;
-  transition: background-color 0.7s ease-in-out, color 0.7s ease-in-out;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 input {
@@ -45,7 +45,7 @@ input {
   color: gray;
   outline: none;
   font-size: 17px;
-  transition: background-color 0.7s ease-in-out, color 0.7s ease-in-out;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .filterMenu {
@@ -56,12 +56,11 @@ input {
   padding: 15px 20px;
   border-radius: 4px;
   box-shadow: 0 7px 29px 0 rgba(100, 100, 111, 0.2);
-  transition: background-color 1s ease-in-out;
   top: calc(100% + 3px); /* Position below the filter */
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  transition: background-color 0.7s ease-in-out, color 0.7s ease-in-out;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   left: 0; /* Align with the left edge of the filter */
 }
 
